--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>WEdPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?341">
+    <link rel="stylesheet" href="wedpad.css?34121912315252aaafz">
 </head>
 
 <body>
@@ -18,10 +18,10 @@
 </div>
 
 <div id="right">
-    <div class="button" id="button-log" onClick="switchView('log');"><b>LOG</b><span id="button-log-text"></span></div>
-    <div class="button" id="button-system" onClick="switchView('system');"><b>SYSTEM</b><span id="button-system-text"></span></div>
-    <div class="button" id="button-bodies" onClick="switchView('bodies');"><b>BODIES</b><span id="button-bodies-text"></span></div>
-    <div class="button" id="button-signals" onClick="switchView('signals');"><b>SIGNALS</b><span id="button-signals-text"></span></div>
+    <div class="button" id="button-log" onClick="switchView('log');"><b>LOG</b><p><div class="button-text" id="button-log-text"></div></div>
+    <div class="button" id="button-system" onClick="switchView('system');"><b>SYSTEM</b><p><div class="button-text" id="button-system-text"></div></div>
+    <div class="button" id="button-bodies" onClick="switchView('bodies');"><b>BODIES</b><p><div class="button-text" id="button-bodies-text"></div></div>
+    <div class="button" id="button-signals" onClick="switchView('signals');"><b>SIGNALS</b><p><div class="button-text" id="button-signals-text"></div></div>
 </div>
 
 <!-- SCRIPTS -->
