--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>WEdPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?34121912315252aaafz11">
+    <link rel="stylesheet" href="wedpad.css?34121912315252aaafz111aaz1d1zza2">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="view-main"   id="view-system"></div>
     <div class="view-main"   id="view-bodies"></div>
     <div class="view-main"   id="view-signals"></div>
-    <div class="view-bottom" id="view-bottom"></div>
+    <div class="view-bottom-container" id="view-bottom-container"><div id="view-bottom">hello, lunaticki!</div></div>
 </div>
 
 <div id="right">
