--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -14,7 +14,7 @@
     <div class="view-main"   id="view-system"></div>
     <div class="view-main"   id="view-bodies"></div>
     <div class="view-main"   id="view-signals"></div>
-    <div class="view-bottom-container" id="view-bottom-container"><div id="view-bottom">hello, lunaticki!</div></div>
+    <div class="view-bottom-container" id="view-bottom-container"><div id="view-bottom"></div></div>
 </div>
 
 <div id="right">
