--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>WEdPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?A121221zaaa1aa1azza">
+    <link rel="stylesheet" href="wedpad.css?A121221zaaa1aa1azza1">
 </head>
 
 <body>
