--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>WEdPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?BaaaaaZazzZz">
+    <title>WEDPad - Web: Elite Dangerous Pad</title>
+    <link rel="stylesheet" href="wedpad.css?C">
 </head>
 
 <body>
