--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>WEDPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?D">
+    <link rel="stylesheet" href="wedpad.css?DAAAZXKNKIK">
 </head>
 
 <body>
