css fix; Status.json reading fixed

--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>WEDPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?DAAAZXKNKIKZS2zKZzQQAAAZAAAA131232445">
+    <link rel="stylesheet" href="wedpad.css?E">
 </head>
 
 <body>
-
 <div id="left">
     <div class="view-top"    id="view-top"></div>
     <div class="view-main"   id="view-log"></div>
@@ -16,15 +15,12 @@
     <div class="view-main"   id="view-signals"></div>
     <div class="view-bottom-container" id="view-bottom-container"><div id="view-bottom"></div></div>
 </div>
-
 <div id="right">
     <div class="button" id="button-log" onClick="switchView('log');"><b>LOG</b><p><div class="button-text" id="button-log-text"></div></div>
     <div class="button" id="button-system" onClick="switchView('system');"><b>SYSTEM</b><p><div class="button-text" id="button-system-text"></div></div>
     <div class="button" id="button-bodies" onClick="switchView('bodies');"><b>BODIES</b><p><div class="button-text" id="button-bodies-text"></div></div>
     <div class="button" id="button-signals" onClick="switchView('signals');"><b>SIGNALS</b><p><div class="button-text" id="button-signals-text"></div></div>
 </div>
-
-<!-- SCRIPTS -->
 
 <script>
 
@@ -148,7 +144,6 @@ function makeLog(line) {
 }
 
 </script>
-
 
 </body>
 
