--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>WEDPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?E12345">
+    <link rel="stylesheet" href="wedpad.css?E123456">
 </head>
 
 <body>
@@ -140,7 +140,7 @@ async function waitUntil(condition, time = 2000) {
 }
 
 function makeLog(line) {
-   return '<i><font color="gray">' + timestamp() + '&gt;</font></i> ' + line + '<br>';
+   return '<i><font color="gray">' + timestamp() + '&gt;</font> ' + line + '</i><br>';
 }
 
 </script>
