--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <title>WEDPad - Web: Elite Dangerous Pad</title>
-    <link rel="stylesheet" href="wedpad.css?E1234567890">
+    <link rel="stylesheet" href="wedpad.css?E12345678901224011111">
 </head>
 
 <body>
