--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -11,16 +11,18 @@
 <div id="left">
     <div class="view-top"    id="view-top"></div>
     <div class="view-main"   id="view-log"></div>
-    <div class="view-main"   id="view-system"></div>
+    <div class="view-main"   id="view-stars"></div>
     <div class="view-main"   id="view-bodies"></div>
     <div class="view-main"   id="view-signals"></div>
+    <div class="view-main"   id="view-notes"></div>
     <div class="view-bottom-container" id="view-bottom-container"><div id="view-bottom"></div></div>
 </div>
 <div id="right">
     <div class="button" id="button-log" onClick="switchView('log');"><b>LOG</b><p><div class="button-text" id="button-log-text"></div></div>
-    <div class="button" id="button-system" onClick="switchView('system');"><b>SYSTEM</b><p><div class="button-text" id="button-system-text"></div></div>
+    <div class="button" id="button-stars" onClick="switchView('stars');"><b>STARS</b><p><div class="button-text" id="button-stars-text"></div></div>
     <div class="button" id="button-bodies" onClick="switchView('bodies');"><b>BODIES</b><p><div class="button-text" id="button-bodies-text"></div></div>
     <div class="button" id="button-signals" onClick="switchView('signals');"><b>SIGNALS</b><p><div class="button-text" id="button-signals-text"></div></div>
+    <div class="button" id="button-notes" onClick="switchView('notes');"><b>NOTES</b><p><div class="button-text" id="button-notes-text"></div></div>
 </div>
 
 <script>
@@ -38,15 +40,17 @@ window.onload = function () {
 
 function switchView(id) {
     document.getElementById("button-log").setAttribute("class", "button");
-    document.getElementById("button-system").setAttribute("class", "button");
+    document.getElementById("button-stars").setAttribute("class", "button");
     document.getElementById("button-bodies").setAttribute("class", "button");
     document.getElementById("button-signals").setAttribute("class", "button");
+    document.getElementById("button-notes").setAttribute("class", "button");
     document.getElementById("button-" + id).setAttribute("class", "button button-active");
 
     document.getElementById("view-log").style.display = 'none';
-    document.getElementById("view-system").style.display = 'none';
+    document.getElementById("view-stars").style.display = 'none';
     document.getElementById("view-bodies").style.display = 'none';
     document.getElementById("view-signals").style.display = 'none';
+    document.getElementById("view-notes").style.display = 'none';
 
     var output = document.getElementById("view-" + id);
     output.style.display = 'block';
