--- a/res/webpage/index.html
+++ b/res/webpage/index.html
@@ -31,7 +31,7 @@
 </div>
 <div id="right">
     <div class="button" id="button-log" onClick="switchView('log');"><b>LOG</b><p><div class="button-text" id="button-log-text"></div></div>
-    <div class="button" id="button-stars" onClick="switchView('stars');"><b>STARS</b><p><div class="button-text" id="button-stars-text"></div></div>
+    <div class="button" id="button-stars" onClick="switchView('stars');"><b>SYSTEM</b><p><div class="button-text" id="button-stars-text"></div></div>
     <div class="button" id="button-bodies" onClick="switchView('bodies');"><b>BODIES</b><p><div class="button-text" id="button-bodies-text"></div></div>
     <div class="button" id="button-signals" onClick="switchView('signals');"><b>SIGNALS</b><p><div class="button-text" id="button-signals-text"></div></div>
     <div class="button" id="button-notes" onClick="switchView('notes');"><b>NOTES</b><p><div class="button-text" id="button-notes-text"></div></div>
